# ModmailBot

./: Cargo.toml  README
src/: main.rs
